| Summary: | ASTERISK-22382: modifying transport configuration results in a crash a few seconds after a 'core reload' (security_event_get_transport at res_pjsip/security_events.c) | ||||
| Reporter: | Rusty Newton (rnewton) | Labels: | |||
| Date Opened: | 2013-08-24 18:34:52 | Date Closed: | 2013-08-30 14:52:23 | ||
| Priority: | Critical | Regression? | |||
| Status: | Closed/Complete | Components: | Resources/res_pjsip | ||
| Versions: | 12 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | SVN-branch-12-r397614 | Attachments: | ( 0) backtrace6.txt ( 1) full6.txt ( 2) pjsip.txt | ||
| Description: | To Reproduce:
* modify transport name and the places it's referenced in pjsip.conf * perform a "core reload" (forgetting that transport config effectively needs an Asterisk restart) Happens after about 5-10 seconds. | ||||
| Comments: | |||||